Estoy probando el comando de git

--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<<<<<<< HEAD
-<h1>hello world!!<h1>
-
-putongoooooo
-=======
-<h1> hola putongo <h1> 
->>>>>>> 62fc93f702901c36da505b71d37fe2dbbb616deb
+<h1> im currently testing github and git commands<h1>
