--- a/inventario.html
+++ b/inventario.html
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
 prueba de conflicto... desde VS
-=======
 Another, another test...
->>>>>>> 5c4d15ba7f8389e2cd433fed393eedc2b4157b9e
+este es una prueba
